[package]
name = "cmps-455-4-pacman"
version = "0.1.0"
edition = "2021"

# Targets!
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

# NOTE: you must manually install https://github.com/michaeleisel/zld on mac. you can easily do this with the "brew" package manager:
# `brew install michaeleisel/zld/zld`
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=y"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# And for possible releases.
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
bevy-inspector-egui = "0.28.0"
serde = "1.0.215"

[dependencies.bevy]
version = "0.14.2"
# Disable the default features if there are any that you do not want
default-features = false
features = [
    "android_shared_stdcxx",
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_ui",
    "bevy_winit",
    "bevy_state",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "zstd"
]
